fix(ui): align datatable items to center

--- a/app/portainer/components/datatables/datatable.css
+++ b/app/portainer/components/datatables/datatable.css
@@ -6,6 +6,7 @@
   border-radius: 8px;
 
   display: flex;
+  align-items: center;
   gap: 5px;
 }
 
